Application - Preview: Bugfix for scrollbars

--- a/src/packages/default/Preview/main.css
+++ b/src/packages/default/Preview/main.css
@@ -3,7 +3,7 @@
 }
 .Window_ApplicationPreviewWindow .WindowWrapper .Frame {
   position : absolute;
-  top : 30px;
+  top : 35px;
   left : 5px;
   right : 5px;
   bottom : 5px;
